<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aquino.myapp.MainActivity"
    android:weightSum="1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/bg_1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/title"
        android:textSize="40dp"
        android:textColor="@color/cardview_light_background"
        android:layout_marginStart="56dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/cardView"
        android:id="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginStart="27dp" />

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="9dp"
        android:id="@+id/cardView"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:scaleType="fitStart"
            android:onClick="details"
            app:srcCompat="@drawable/bg_picture1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_picture1"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place1"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="10dp"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="120dp"
            app:srcCompat="@drawable/dots_vertical" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/cardView"
        android:layout_toEndOf="@+id/cardView"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="18dp"
        android:id="@+id/cardView2" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:onClick="details"
            app:srcCompat="@drawable/bg_picture2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_picture2"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place2"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="10dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="120dp"
            app:srcCompat="@drawable/dots_vertical" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/cardView3"
        android:layout_alignStart="@+id/cardView2"
        android:id="@+id/cardView4"


        >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:onClick="details"
            app:srcCompat="@drawable/bg_picture4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_picture4"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place3"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="10dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="120dp"
            app:srcCompat="@drawable/dots_vertical" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/cardView3"
        android:layout_below="@+id/cardView"
        android:layout_alignStart="@+id/cardView"
        android:layout_marginTop="20dp"

        >

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:scaleType="fitStart"
            android:onClick="details"
            app:srcCompat="@drawable/bg_picture3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_picture3"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place4"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="10dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:layout_marginLeft="120dp"
            app:srcCompat="@drawable/dots_vertical" />

    </android.support.v7.widget.CardView>




</RelativeLayout>
