<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aquino.myapp.Main2Activity"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_above="@+id/linearLayout"
        android:layout_weight="0.93">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="135dp"
                    android:layout_height="135dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="120dp">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/bg_picture6" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:layout_marginStart="70dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/bg_picture7" />

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:layout_marginTop="70dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/bg_picture8" />

                    <ImageView
                        android:layout_width="66dp"
                        android:layout_height="66dp"
                        android:layout_marginStart="70dp"
                        android:layout_marginTop="70dp"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/bg_picture9" />
                </android.support.v7.widget.CardView>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="139dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_picture5" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.00"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_picture6" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:text="@string/title_picture3" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    app:srcCompat="@drawable/dots_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="10dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_picture7" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/title_picture2" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    app:srcCompat="@drawable/dots_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="10dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_picture8" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/title_picture4" />

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    app:srcCompat="@drawable/dots_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="10dp"
                    app:srcCompat="@drawable/bg_picture9" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/title_picture1" />

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.03"
                    app:srcCompat="@drawable/dots_vertical" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cardview_dark_background"
        android:orientation="horizontal"></LinearLayout>

</LinearLayout>
